--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         </div>
         <div class="form-check form-check-inline">
           Sort By:
-          <input class="form-check-input ml-2" type="radio" name="sortby" value="relevance" checked>
+          <input class="form-check-input ml-2" type="radio" name="sortBy" value="relevance" checked>
           <label class="form-check-label">
             Relevance
           </label>
         </div>
         <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="sortby" value="new">
+            <input class="form-check-input" type="radio" name="sortBy" value="new">
           <label class="form-check-label">
             Latest
           </label>
